# sphenix_analysis

AnNeutralMeson/: README.md
AnNeutralMeson/mainAnalysis/bunch_shuffling/: CMakeLists.txt
AnNeutralMeson/mainAnalysis/bunch_shuffling/include/AsymmetryCalc/: Constants.h  ShuffleBunches.h  WrapperArrays.h  WrapperAsymArrays.h  WrapperCorrAsymArrays.h  WrapperFinalAsymArrays.h  WrapperFitAsymArrays.h
AnNeutralMeson/mainAnalysis/bunch_shuffling/run/: BunchShuffling.cc  CMakeLists.txt
AnNeutralMeson/mainAnalysis/bunch_shuffling/shuffle_configurations/: config.txt
AnNeutralMeson/mainAnalysis/bunch_shuffling/src/: ShuffleBunches.cc
AnNeutralMeson/mainAnalysis/invariant_mass_fit/parametric_fit/: CMakeLists.txt
AnNeutralMeson/mainAnalysis/invariant_mass_fit/parametric_fit/include/: MyClass.xx
AnNeutralMeson/mainAnalysis/invariant_mass_fit/parametric_fit/include/CustomHistogramFit/: ConstrainedFitter.h  FitFunctions.h  HistogramUtils.h
AnNeutralMeson/mainAnalysis/invariant_mass_fit/parametric_fit/macros/: fit_argusmodified_2.C  fit_argusmodified_2_eta.C  fit_argusmodified_2_xf.C  macro_sum_forward_backward.C
AnNeutralMeson/mainAnalysis/invariant_mass_fit/parametric_fit/src/: ConstrainedFitter.cc  FitFunctions.cc  HistogramUtils.cc  MyClass.xx
AnNeutralMeson/polarizationAnalysis/: estimateLuminosityByFill.C  estimateLuminosityByRun.C  luminosity_fill_ana509.root  luminosity_run_ana509.root  run_to_fill.txt  runs.txt  spin_pattern_by_runs.root  spin_pattern_fill_0mrad.root  spin_pattern_fill_15mrad.root
AnNeutralMeson/triggerEmulator/src/: CaloTriggerEmulatorAnNeutral.cc  CaloTriggerEmulatorAnNeutral.h  Makefile.am  TriggerTile.cc  TriggerTile.h  TriggerTileLinkDef.h  configure.ac
CaloCorrelationsPP/src/: CalorimeterCorrelationsPP.cc  CalorimeterCorrelationsPP.h  Makefile.am  configure.ac
ChargedHadronMultiplicity-SmallSystem/analysis/: Makefile  NInttClusterCrossing.C  SeedRelEff.C  VertexInSimulation.C  beamspot_2DJointMedian.C  condor_TrackletAnaCombinatoric.job  plot_seeddisplay.C  plot_tklCombinatoric.C  runTrackletAnaCombinatoric.sh  run_plotTrackletAnaCombinatoric_scanTags.sh  submit_TrackletAnaCombinatoric_scanTags.sh
ChargedHadronMultiplicity-SmallSystem/module/: Makefile.am  VertexCompare.cc  VertexCompare.h  configure.ac
EnergyCorrelatorsJets/CalorimeterEnergyCorrelatorCommonTools/: BuildMetaTowers.h  DiscretizationCorrection.h
HerwigToHepMCProduction/HepMCTrigger/: HepMCJetTrigger.cc  HepMCJetTrigger.h  Makefile.am
HerwigToHepMCProduction/HepMC_scripts/: GetFilteredCrossSection.C  Herwig_run.sh  Process_xs.py  Process_xs.sh
HerwigToHepMCProduction/HerwigHepMCFilter/: Makefile.am  RunHerwigHepMCFilter.C  RunHerwigHepMCFilter.sh
JetShapeEventObservables/: .gitignore
JetShapeEventObservables/src/: JetShapeEventObservables.cc  JetShapeEventObservables.h  Makefile.am  SoftDropComp.h  TowerJetWeighter.h  configure.ac
LWTrackNtuplizer/module/: Makefile.am  configure.ac  lwtrackntuplizer.cc  lwtrackntuplizer.h
LightFlavorRatios/bco_correction/: Lambda_Kshort_ratio.C  README  V0DuplicateReader.h
(+4461 files in other folders)
